--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<p> 
-Hello World!
-</p>
-
-<p>
-My name is Alec and I am finally going back to college after almost ten years. Wishing ya'll the best of luck!
-</p>
-
-<p>
-A couple of my hobbies are Pathfinder, video games, and homebrewing mead.
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Internet Technologies and Web Design</title>
+</head>
+<body>
+  <p>&amp; Hello world. This is my first website!</p>
+	<p>
+	My name is Alec and I am finally going back to college after almost ten years. Wishing ya'll the best of luck!
+	</p>
+  <p>A couple of my hobbies are Pathfinder, video games, and homebrewing mead.</p>
+</body>
+</html>
